Generacion de tabla dinamica segun msj del server ws

--- a/Desafio12/src/views/home.ejs
+++ b/Desafio12/src/views/home.ejs
@@ -6,6 +6,7 @@
 <body>
     <main class="container mt-3">
         <%- include('./partials/form') %> 
+        <div id="productos" class="my-3"></div>
     </main>
     <%- include('./partials/scripts') %> 
 </body>
