Enviando por socket el nuevo producto

--- a/Desafio12/src/views/partials/form.ejs
+++ b/Desafio12/src/views/partials/form.ejs
@@ -1,5 +1,5 @@
 <h2>Crea un producto</h2>
-<form method="POST" action="/productos" class="mb-2">        
+<form class="mb-2" id="form">        
     <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input type="text" class="form-control" id="title" placeholder="Ingresar titulo" name="title">
