Chat realizado con persistencia en memoria

--- a/Desafio12/src/views/home.ejs
+++ b/Desafio12/src/views/home.ejs
@@ -5,8 +5,13 @@
 </head>
 <body>
     <main class="container mt-3">
-        <%- include('./partials/form') %> 
-        <div id="productos" class="my-3"></div>
+        <div class="p-3 bg-light bg-gradient">
+            <%- include('./partials/form') %> 
+            <div id="productos" class="my-3"></div>
+        </div>
+        <div class="p-3 mt-4 bg-light bg-gradient">
+            <%- include('./partials/formChat') %>
+        </div>
     </main>
     <%- include('./partials/scripts') %> 
 </body>
