Login a traves de formulario

--- a/Desafio24/src/views/login.ejs
+++ b/Desafio24/src/views/login.ejs
@@ -10,7 +10,7 @@
             <form id="formLogin">        
                 <div class="mb-2 w-50">
                     <label for="name" class="form-label">User name</label>
-                    <input type="email" class="form-control" id="name" placeholder="Tu nombre" name="name">
+                    <input type="text" class="form-control" id="name" placeholder="Tu nombre" name="name">
                 </div>
                 <div class="mb-2 w-50">
                     <label for="email" class="form-label">Email</label>
@@ -25,6 +25,6 @@
             </form>
         </div>
     </main>
-    <%- include('./partials/scripts') %> 
+    <script src="login.js" ></script>
 </body>
 </html>
