--- a/Desafio24/src/views/dashboard.ejs
+++ b/Desafio24/src/views/dashboard.ejs
@@ -5,6 +5,10 @@
 </head>
 <body>
     <main class="container mt-3">
+        <div class="p-3 alert alert-success d-flex justify-content-between align-items-center" role="alert">
+            <h4 style="margin: 0;">Bienvenido <%= user %></h4>
+            <button type="button" class="btn btn-outline-success">Logout</button>
+        </div>
         <div class="p-3 bg-light bg-gradient">
             <%- include('./partials/form') %> 
             <div id="productos" class="my-3"></div>
