Funcionando persistencia de sesion en mongo atlas

--- a/Desafio24/src/views/logout.ejs
+++ b/Desafio24/src/views/logout.ejs
@@ -11,7 +11,7 @@
     </main>
     <script>
         setTimeout(() => fetch('/logout',{
-            method: 'POST'
+            method: 'DELETE'
         }).then(location.href = '/'), 2000)
     </script>
 </body>
