Redireccion entre login y registro

--- a/Desafio26/src/views/register.ejs
+++ b/Desafio26/src/views/register.ejs
@@ -16,8 +16,9 @@
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password" placeholder="****" name="password">
                 </div>
-                <div class="py-2 w-50">
-                    <button class="btn btn-primary" type="submit"><a>Submit</a></button>
+                <div class="py-2 w-50 d-flex justify-content-between align-items-center">
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                    <a href="/login">Go to log in!</a>
                 </div>
                 <div class="d-none w-50">
                     <p class="text-danger" id="feedback"></p>
