--- a/Desafio26/src/views/login.ejs
+++ b/Desafio26/src/views/login.ejs
@@ -16,8 +16,9 @@
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email" placeholder="tuCorreo@mail.com" name="email">
                 </div>
-                <div class="py-2 w-50">
-                    <button class="btn btn-primary" type="submit"><a>Submit</a></button>
+                <div class="py-2 w-50 d-flex justify-content-between align-items-center">
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                    <a href="/register">Go to sign up!</a>
                 </div>
                 <div class="d-none w-50">
                     <p class="text-danger" id="feedback"></p>
