--- a/Desafio26/src/views/login.ejs
+++ b/Desafio26/src/views/login.ejs
@@ -9,12 +9,12 @@
             <h2>Login</h2>
             <form id="formLogin" action="/login" method="post">        
                 <div class="mb-2 w-50">
-                    <label for="name" class="form-label">User name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Tu nombre" name="name">
+                    <label for="username" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="username" placeholder="tuCorreo@mail.com" name="username">
                 </div>
                 <div class="mb-2 w-50">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="tuCorreo@mail.com" name="email">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="****" name="password">
                 </div>
                 <div class="py-2 w-50 d-flex justify-content-between align-items-center">
                     <button class="btn btn-primary" type="submit">Submit</button>
