--- a/Desafio26/src/views/login.ejs
+++ b/Desafio26/src/views/login.ejs
@@ -14,14 +14,11 @@
                 </div>
                 <div class="mb-2 w-50">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="****" name="password">
+                    <input type="password" class="form-control" id="password" placeholder="*****" name="password">
                 </div>
                 <div class="py-2 w-50 d-flex justify-content-between align-items-center">
                     <button class="btn btn-primary" type="submit">Submit</button>
                     <a href="/register">Go to sign up!</a>
-                </div>
-                <div class="d-none w-50">
-                    <p class="text-danger" id="feedback"></p>
                 </div>
             </form>
         </div>
