Limpiando el codigo y reutilizando plantillas

--- a/Desafio26/src/views/partials/formChat.ejs
+++ b/Desafio26/src/views/partials/formChat.ejs
@@ -2,7 +2,7 @@
 <form class="mb-2" id="formChat">        
     <div class="mb-2 w-50">
         <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" placeholder="tuCorreo@mail.com" name="email">
+        <input type="email" class="form-control" id="email" readonly value="<%= user %>" name="email">
         <p class="text-danger" id="feedback"></p>
     </div>
     <hr>
