--- a/Desafio26/src/views/authForm.ejs
+++ b/Desafio26/src/views/authForm.ejs
@@ -6,8 +6,8 @@
 <body>
     <main class="container mt-3">
         <div class="p-3 mt-4 bg-light bg-gradient">
-            <h2>Login</h2>
-            <form id="formLogin" action="/login" method="post">        
+            <h2><%= title %></h2>
+            <form id="formLogin" action="<%= action %>" method="post">        
                 <div class="mb-2 w-50">
                     <label for="username" class="form-label">Email</label>
                     <input type="email" class="form-control" id="username" placeholder="tuCorreo@mail.com" name="username">
@@ -18,7 +18,7 @@
                 </div>
                 <div class="py-2 w-50 d-flex justify-content-between align-items-center">
                     <button class="btn btn-primary" type="submit">Submit</button>
-                    <a href="/register">Go to sign up!</a>
+                    <a href="<%= href %>"><%= linkMsg %> </a>
                 </div>
             </form>
         </div>
